--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SocialHackersCodeSchool/class8Project#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.2"
   }
 }
