--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^4.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1"
   }
 }
